<resources>
    <string name="app_name">Project9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_login">Back to login...</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="new_user">New User?</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Create Account</string>
    <string name="selfie_tip">Shake Your Phone \nto Take A New Selfie</string>
    <string name="take_selfie">Take Selfie</string>
</resources>